@@ -1,4 +1,5 @@
 include $(top_srcdir)/extensions/extension.am
 
 EXTENSION=svn
-extlib_SCRIPTS = require.sh
+
+loader_SCRIPTS = svn
